sftp: account for maximum request length when using sftp_aio

As stated in the libssh documentation, AIO functions cap the allowed
length per request. Account for that by breaking up into multiple
requests when necessary.

BUG: 488581


(cherry picked from commit 0b589bd8744457dd5c427cc6b1626221b5e8d250)

Co-authored-by: Ser Freeman <serfreeman1337@gmail.com>